build: post merge fixes